Added drinks to admin portal

--- a/src/app/Components/home/home.component.html
+++ b/src/app/Components/home/home.component.html
@@ -3,26 +3,14 @@
     <h1>Drinks</h1>
     <div class="cardsContainer">
       <mat-card *ngFor="let item of menuService.drinkItems">
-        <mat-card-header color="primary">
-          <mat-card-title>{{ item.drinkName }}</mat-card-title>
-          <mat-card-subtitle
-            >regular: {{ item.smallPrice }} large:
-            {{ item.largePrice }}</mat-card-subtitle
-          >
-        </mat-card-header>
+        <mat-card-title
+          ><strong>{{ item.drinkName }}</strong></mat-card-title
+        >
+        <mat-card-content
+          >reg: {{ item.regularPrice }} | lg:
+          {{ item.largePrice }}</mat-card-content
+        >
       </mat-card>
     </div>
-    <!-- <div class="socialContainer">
-      <iframe
-        src="https://www.facebook.com/plugins/page.php?href=https%3A%2F%2Fwww.facebook.com%2Fjanescoffeehouse&tabs=timeline&width=340&height=500&small_header=true&adapt_container_width=true&hide_cover=false&show_facepile=true&appId"
-        width="340px"
-        height="500px"
-        style="border: none; overflow: hidden"
-        scrolling="no"
-        frameborder="0"
-        allowfullscreen="true"
-        allow="autoplay; clipboard-write; encrypted-media; picture-in-picture; web-share"
-      ></iframe>
-    </div> -->
   </div>
 </div>
