--- a/src/app/Components/home/home.component.css
+++ b/src/app/Components/home/home.component.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
   width: 100vw;
-  background-color: #ff5252;
+  background-color: #263238;
   border: none;
   margin: 0;
   padding: 0;
@@ -12,20 +12,27 @@
   align-items: center;
   flex-direction: column;
   width: 80vw;
-  background-color: antiquewhite;
+  background-color: #E0E0E0
+  ;
   box-shadow: slategray 0px 5px 10px;
 
 }
 .cardsContainer {
   display: flex;
-  /* flex-direction: row; */
+  flex-direction: row;
   flex-wrap: wrap;
   justify-content:center;
 }
 mat-card {
+  display: flex;
   margin: 5px;
-  width: 20%;
-  height: 100px;
+  width: 45%;
+  padding: 5px;
+  ;
+  justify-content: center;
+  align-items: center;
+
+  flex-wrap: wrap;
 }
 /* h1 {
     font-family:;
