--- a/src/custom-theme.scss
+++ b/src/custom-theme.scss
@@ -12,11 +12,11 @@
 // Define the palettes for your theme using the Material Design palettes available in palette.scss
 // (imported above). For each palette, you can optionally specify a default, lighter, and darker
 // hue. Available color palettes: https://material.io/design/color/
-$JanesCoffeeShop-primary: mat.define-palette(mat.$brown-palette);
-$JanesCoffeeShop-accent: mat.define-palette(mat.$red-palette, A200, A100, A400);
+$JanesCoffeeShop-primary: mat.define-palette(mat.$gray-palette,900);
+$JanesCoffeeShop-accent: mat.define-palette(mat.$blue-gray-palette,700);
 
 // The warn palette is optional (defaults to red).
-$JanesCoffeeShop-warn: mat.define-palette(mat.$green-palette);
+$JanesCoffeeShop-warn: mat.define-palette(mat.$gray-palette,200);
 
 // Create the theme object. A theme consists of configurations for individual
 // theming systems such as "color" or "typography".
