--- a/src/app/Components/portal/portal.component.html
+++ b/src/app/Components/portal/portal.component.html
@@ -15,4 +15,22 @@
   </mat-form-field>
   <button mat-raised-button color="accent" type="submit"[disabled]=!drinkForm.valid>Submit</button>
 </form>
-<app-home></app-home>
+
+<div class="body">
+  <div class="container">
+    <h1>Drinks</h1>
+    <div class="cardsContainer">
+      <mat-card *ngFor="let item of menuService.drinkItems">
+        <mat-card-title
+          ><strong>{{ item.drinkName }}</strong></mat-card-title
+        >
+        <mat-card-content
+          >reg: {{ item.regularPrice }} | lg:
+          {{ item.largePrice }}</mat-card-content
+        >
+        <mat-icon (click)="menuService.onRemoveDrink(item.id)">delete</mat-icon>
+      </mat-card>
+    </div>
+  </div>
+</div>
+
