Added treats to portal and home screen

--- a/src/app/Components/home/home.component.html
+++ b/src/app/Components/home/home.component.html
@@ -14,3 +14,16 @@
     </div>
   </div>
 </div>
+<div class="body">
+  <div class="container">
+    <h1>Treats</h1>
+    <div class="cardsContainer">
+      <mat-card *ngFor="let item of menuService.treatItems">
+        <mat-card-title
+          ><strong>{{ item.treatName }}</strong></mat-card-title
+        >
+        <mat-card-content>reg: {{ item.regularPrice }}</mat-card-content>
+      </mat-card>
+    </div>
+  </div>
+</div>
