--- a/src/app/Components/header/header.component.html
+++ b/src/app/Components/header/header.component.html
@@ -1,4 +1,9 @@
 <mat-toolbar color="primary">
-  <img src="/assets/JanesCoffeeShopLogo.png" alt="Logo" />
-  <mat-icon color="accent">menu</mat-icon>
+  <img  src="/assets/JanesCoffeeShopLogo.png" alt="Logo" />
+  <mat-icon color="accent" [matMenuTriggerFor]="beforeMenu">menu</mat-icon>
+  <mat-menu #beforeMenu="matMenu" yPosition="below">
+    <button mat-menu-item routerLink="/">Menu</button>
+    <button mat-menu-item routerLink="/portal">Portal</button>
+  </mat-menu>
 </mat-toolbar>
+
