--- a/src/app/Components/portal/portal.component.css
+++ b/src/app/Components/portal/portal.component.css
@@ -23,14 +23,32 @@
     flex-wrap: wrap;
     justify-content:center;
   }
-  mat-card {
+  .regular {
     display: flex;
     margin: 5px;
     width: 45%;
     padding: 5px;
-    ;
     justify-content: center;
     align-items: center;
-
     flex-wrap: wrap;
   }
+
+  .title  {
+    display: flex;
+    justify-content: flex-start;
+    flex-direction: column;
+
+  }
+  .incomingOrderCard {
+      display: flex;
+      margin: 5px;
+      width: 45%;
+      padding: 5px;
+      justify-content: flex-start;
+      align-items: flex-start;
+      flex-wrap: wrap;
+  }
+.item {
+  padding:5px
+}
+
