--- a/src/app/Modals/order/order.component.html
+++ b/src/app/Modals/order/order.component.html
@@ -1,18 +1,21 @@
-<div *ngFor="let item of menuService.currentOrder">
-  <div class="container">
-    <div>
-      <h1 mat-dialog-content>
-        {{ item.quantity }} {{ item.size }} {{ item.name }}
-      </h1>
-      <h2 mat-dialog-content>{{ item.flavors }}</h2>
+<h1 *ngIf="!menuService.itemsInOrderMessage" class="messageContainer">No items have been added to you order.</h1>
+<div *ngIf="menuService.itemsInOrderMessage">
+  <div *ngFor="let item of menuService.currentOrder">
+    <div class="container">
+      <div>
+        <h1 mat-dialog-content>
+          {{ item.quantity }} {{ item.size }} {{ item.name }}
+        </h1>
+        <h2 mat-dialog-content>{{ item.flavors }}</h2>
+      </div>
+      <div>
+        <h2 mat-dialog-content>{{ item.price }}</h2>
+      </div>
     </div>
-    <div>
-      <h2 mat-dialog-content>{{ item.price }}</h2>
-    </div>
+    <hr />
   </div>
-  <hr />
-</div>
-<div class="buttons">
-  <button mat-button mat-dialog-close>Submit Order</button>
-  <button mat-button mat-dialog-close>Clear Order</button>
+  <div class="buttons">
+    <button mat-button mat-dialog-close (click)="menuService.onSubmitOrder()">Submit Order</button>
+    <button mat-button mat-dialog-close (click)="menuService.currentOrder = []; menuService.itemsInOrderMessage = false">Clear Order</button>
+  </div>
 </div>
