--- a/src/app/Components/menu/menu.component.css
+++ b/src/app/Components/menu/menu.component.css
@@ -2,6 +2,7 @@
   display: flex;
   justify-content: center;
   width: 100vw;
+  height: 100%;
   background-color: #263238;
   border: none;
   margin: 0;
@@ -12,28 +13,38 @@
   align-items: center;
   flex-direction: column;
   width: 80vw;
-  background-color: #E0E0E0
-  ;
-  box-shadow: slategray 0px 5px 10px;
-
+  height: 100%;
+  min-width: 300px;
+  background-color: #e0e0e0;
+  margin: 0;
+  padding: 0;
 }
 .cardsContainer {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content:center;
+  justify-content: center;
 }
 mat-card {
   display: flex;
   margin: 5px;
+  min-width: 275px;
+  max-width: 350px;
   width: 45%;
   padding: 5px;
-  ;
   justify-content: center;
   align-items: center;
 
   flex-wrap: wrap;
 }
-/* h1 {
-    font-family:;
-} */
+
+.menuContainer {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+}
+
+img {
+  height: 100px;
+  padding: 10px;
+}
