--- a/src/app/Components/menu/menu.component.html
+++ b/src/app/Components/menu/menu.component.html
@@ -1,29 +1,37 @@
-<div class="body">
-  <div class="container">
-    <h1>Drinks</h1>
-    <div class="cardsContainer">
-      <mat-card *ngFor="let item of menuService.drinkItems" (click)="menuService.openDrinksDialog(item)">
-        <mat-card-title
-          ><strong>{{ item.drinkName }}</strong></mat-card-title
+<div class="menuContainer">
+  <div class="body">
+    <div class="container">
+      <img src="/assets/Drink Title.png" alt="Drinks" />
+      <div class="cardsContainer">
+        <mat-card
+          *ngFor="let item of menuService.drinkItems"
+          (click)="menuService.openDrinksDialog(item)"
         >
-        <mat-card-content
-          >reg: {{ item.regularPrice }} | lg:
-          {{ item.largePrice }}</mat-card-content
-        >
-      </mat-card>
+          <mat-card-title
+            ><strong>{{ item.drinkName }}</strong></mat-card-title
+          >
+          <mat-card-content
+            >reg: {{ item.regularPrice }} | lg:
+            {{ item.largePrice }}</mat-card-content
+          >
+        </mat-card>
+      </div>
     </div>
   </div>
-</div>
-<div class="body">
-  <div class="container">
-    <h1>Treats</h1>
-    <div class="cardsContainer">
-      <mat-card *ngFor="let item of menuService.treatItems" (click)="menuService.openTreatsDialog(item)">
-        <mat-card-title
-          ><strong>{{ item.treatName }}</strong></mat-card-title
+  <div class="body">
+    <div class="container">
+      <img src="/assets/Treats Title.png" alt="Drinks" />
+      <div class="cardsContainer">
+        <mat-card
+          *ngFor="let item of menuService.treatItems"
+          (click)="menuService.openTreatsDialog(item)"
         >
-        <mat-card-content>reg: {{ item.regularPrice }}</mat-card-content>
-      </mat-card>
+          <mat-card-title
+            ><strong>{{ item.treatName }}</strong></mat-card-title
+          >
+          <mat-card-content>reg: {{ item.regularPrice }}</mat-card-content>
+        </mat-card>
+      </div>
     </div>
   </div>
 </div>
