--- a/src/app/Components/menu/menu.component.css
+++ b/src/app/Components/menu/menu.component.css
@@ -2,7 +2,7 @@
   display: flex;
   justify-content: center;
   width: 100vw;
-  height: 100%;
+  height: auto;
   background-color: #263238;
   border: none;
   margin: 0;
@@ -11,13 +11,13 @@
 .container {
   display: flex;
   align-items: center;
+  justify-content: flex-start;
   flex-direction: column;
   width: 80vw;
-  height: 100%;
   min-width: 300px;
   background-color: #e0e0e0;
-  margin: 0;
-  padding: 0;
+  padding: 0 0 20px 0;
+
 }
 .cardsContainer {
   display: flex;
@@ -42,6 +42,9 @@ mat-card {
   display: flex;
   flex-direction: column;
   align-items: flex-start;
+  height: 100vh;
+  width:100vw;
+  background-color: #263238;
 }
 
 img {
