--- a/src/app/Components/portal/portal.component.css
+++ b/src/app/Components/portal/portal.component.css
@@ -39,6 +39,8 @@
 .incomingOrderCard {
   display: flex;
   margin: 5px;
+  min-width: 275px;
+  max-width: 350px;
   width: 45%;
   padding: 5px;
   justify-content: flex-start;
@@ -50,4 +52,7 @@
 }
 mat-card {
   min-width: 275px;
+  min-width: 275px;
+  max-width: 350px;
+  width: 45%;
 }
