--- a/src/app/Modals/drink/drink.component.html
+++ b/src/app/Modals/drink/drink.component.html
@@ -14,7 +14,7 @@
   <h2 class="specialInstructions" mat-dialog-content>
     <div *ngFor="let item of menuService.flavorItems">
       <mat-checkbox [name]="item.flavorName" ngModel>
-        {{ item.flavorName }}
+       {{ item.flavorName }}
       </mat-checkbox>
     </div>
   </h2>
@@ -22,7 +22,7 @@
     <mat-form-field>
       <mat-label>Special Instructions:
       </mat-label>
-      <input type="text" matInput name="specialInstructions" ngModel />
+      <input type="textarea" matInput name="specialInstructions" ngModel />
     </mat-form-field>
   </mat-dialog-content>
   <div mat-dialog-actions>
