--- a/src/app/Modals/order/order.component.html
+++ b/src/app/Modals/order/order.component.html
@@ -5,14 +5,17 @@
   <div *ngFor="let item of menuService.currentOrder">
     <div class="container">
       <div>
-        <h1 mat-dialog-content>
+        <h1 mat-dialog-content> <strong>
           {{ item.quantity }} -
-          {{ menuService.sizeNameConversion(item.size) }} - {{ item.name }} - ${{ item.price }}
-        </h1>
+          {{ menuService.sizeNameConversion(item.size) }} -
+          {{ item.name }} -
+          ${{ item.price }}
+        </strong></h1>
+
+        <h2 mat-dialog-content> {{ item.flavors }} </h2>
         <h2 mat-dialog-content>
-          Special Instructions: {{ item.specialInstructions }}
+          {{ item.specialInstructions }}
         </h2>
-        <h2 mat-dialog-content>{{ item.flavors }}</h2>
       </div>
     </div>
     <hr />
