minor fixes and added some css

--- a/src/app/Components/header/header.component.html
+++ b/src/app/Components/header/header.component.html
@@ -2,7 +2,7 @@
 
 
   <mat-icon color="accent" [matMenuTriggerFor]="beforeMenu">menu</mat-icon>
-  <mat-menu #beforeMenu="matMenu" yPosition="below">
+  <mat-menu #beforeMenu="matMenu" xPosition="before">
     <button mat-menu-item routerLink="/">Menu</button>
     <button mat-menu-item routerLink="/portal">Portal</button>
   </mat-menu>
