--- a/src/app/Modals/order/order.component.html
+++ b/src/app/Modals/order/order.component.html
@@ -21,7 +21,7 @@
     <hr />
   </div>
   <h2 mat-dialog-content>
-    <strong>Order Sub-total: ${{ menuService.SubtotalPrice() }}</strong>
+    <strong>Order Total w/ Tax: ${{ menuService.SubtotalPrice() }}</strong>
   </h2>
   <div class="buttons">
     <button mat-button mat-dialog-close (click)="menuService.onSubmitOrder()">
